--- a/src/docs/asciidoc/en/index.adoc
+++ b/src/docs/asciidoc/en/index.adoc
@@ -1,5 +1,5 @@
 = Vavr User Guide
-Daniel Dietrich, Robert Winkler
+Daniel Dietrich, Robert Winkler, Grzegorz Piwowarek
 :toc: left
 :toclevels: 3
 :source-highlighter: coderay
