--- a/src/docs/asciidoc/es/getting_started.adoc
+++ b/src/docs/asciidoc/es/getting_started.adoc
@@ -1,8 +1,8 @@
-== Getting started
+== Comenzando
 
-Projects that include Vavr need to target Java 1.8 at minimum.
+Los proyectos que incluyan Vavr deben apuntar como mínimo a Java 1.8.
 
-The .jar is available at http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22io.vavr%22%20a%3A%22vavr%22[Maven Central].
+El archivo `.jar` está disponible en http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22io.vavr%22%20a%3A%22vavr%22[Maven Central].
 
 === Gradle
 
@@ -32,22 +32,22 @@ dependencies {
     <dependency>
         <groupId>io.vavr</groupId>
         <artifactId>vavr</artifactId>
-        <version>0.10.5</version>
+        <version>0.10.4</version>
     </dependency>
 </dependencies>
 ----
 
-=== Standalone
+=== Independiente
 
-Because Vavr does __not__ depend on any libraries (other than the JVM) you can easily add it as standalone .jar to your classpath.
+Debido a que Vavr __no__ depende de ninguna biblioteca (aparte de la JVM), puedes agregarlo fácilmente como un archivo `.jar` independiente a tu __classpath__.
 
 === Snapshots
 
-Developer versions can be found https://oss.sonatype.org/content/repositories/snapshots/io/vavr/vavr[here].
+Las versiones en desarrollo se pueden encontrar https://oss.sonatype.org/content/repositories/snapshots/io/vavr/vavr[aquí].
 
 ==== Gradle
 
-Add the additional snapshot repository to your `build.gradle`:
+Agrega el repositorio adicional de snapshots en tu archivo `build.gradle`:
 
 [source,groovy]
 ----
@@ -59,7 +59,7 @@ repositories {
 
 ==== Maven
 
-Ensure that your ``~/.m2/settings.xml`` contains the following:
+Asegúrate de que tu archivo ``~/.m2/settings.xml`` contenga lo siguiente:
 
 [source,xml]
 ----
